# argent

./: .env.example  .gitignore  .mcp.json  pyproject.toml
.claude/: settings.json
.claude/agents/: argent-report-generator.md  argent-risk-analyst.md  argent-sentiment-analyst.md  data-collector.md  fundamental-analyst.md  macro-analyst.md  technical-analyst.md
.claude/skills/analyze/: SKILL.md
.claude/skills/argent-analyze/: SKILL.md
.claude/skills/argent-compare/: SKILL.md
.claude/skills/argent-quick/: SKILL.md
.claude/skills/compare/: SKILL.md
.claude/skills/quick/: SKILL.md
data/cache/: .gitkeep
data/scratchpad/: .gitkeep
frontend/: index.html  package.json  playwright.config.ts  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts  endpoints.ts  types.ts
frontend/src/hooks/: useAnalysis.ts  useBacktest.test.ts  useBacktest.ts  usePortfolio.test.ts  usePortfolio.ts  usePriceHistory.test.ts  usePriceHistory.ts  useSSE.ts
frontend/src/pages/: Analysis.tsx  Backtest.tsx  Charts.tsx  Dashboard.tsx  Portfolio.tsx
frontend/src/styles/: index.css
frontend/src/test/: setup.ts  test-utils.tsx
frontend/tests/: comprehensive.spec.ts
scripts/: validate-and-retry.py  validate-argent-command.sh
src/argent/: __init__.py  config.py  main.py
src/argent/agents/: __init__.py  base.py  data_collection.py  fundamental_analysis.py  macro_analysis.py  report.py  risk_analysis.py  sentiment_analysis.py  technical_analysis.py
tests/: __init__.py  test_calculations.py  test_rate_limiter.py  test_state.py
(+49 files in other folders)
